@@ -1010,7 +1010,7 @@ function parseBrowseResp(data, parent, options, cacheKey, parentCommand, parentG
                 } else if (releaseType=="COMPOSITION") {
                     resp.subtitle=i18np("1 Composition", "%1 Compositions", resp.items.length);
                 } else {
-                    resp.subtitle=i18np("1 Album", "%1 Albums", resp.items.length);
+                    resp.subtitle=i18np("1 Release", "%1 Releases", resp.items.length);
                 }
                 if (parent && parent.id && parent.id.startsWith("search:")) {
                     resp.jumplist = []; // Search results NOT sorted???
