@@ -22,6 +22,7 @@
 14. If very wide then show short text next to play, add, insert, and shuffle
     actions in sub-toolbar.
 15. Group all albums lists int releases.
+16. Use 'Releases' instead of 'Albums'.
 
 4.2.2
 -----
